--- a/index.css
+++ b/index.css
@@ -1,5 +1,173 @@
-*{
-    margin:0;
-    padding:0;
+* {
     font-family: 'Montserrat', sans-serif;
+}
+
+:root {
+    /* COLORS  */
+    /* primary */
+    --primary-0: #f0efff;
+    --primary-50: #d8d6ff;
+    --primary-100: #c1beff;
+    --primary-200: #aaa5ff;
+    --primary-300: #938dff;
+    --primary-400: #7b74ff;
+    /* main */
+    --primary-500: #645cff;
+    --primary-600: #554ed9;
+    --primary-700: #4640b3;
+    --primary-800: #37338c;
+    --primary-900: #282566;
+    --primary-1000: #191740;
+    --primary-1100: #0a0919;
+    /* grey */
+    --grey-0: #fafbfc;
+    --grey-50: #f2f4f8;
+    --grey-100: #eaedf3;
+    --grey-200: #e2e7ef;
+    --grey-300: #dbe0ea;
+    --grey-400: #d3dae6;
+    --grey-500: #cbd3e1;
+    --grey-600: #adb3bf;
+    --grey-700: #8e949e;
+    --grey-800: #70747c;
+    --grey-900: #51545a;
+    --grey-1000: #333538;
+    --grey-1100: #141516;
+
+    /* rest */
+    --black: #222;
+    --white: #fff;
+    --red-light: #f8d7da;
+    --red-dark: #842029;
+    --green-light: #d1e7dd;
+    --green-dark: #0f5132;
+
+    /* typography */
+    --headingFont: 'Inconsolata', monospace;
+    --bodyFont: 'Montserrat', sans-serif;
+    --smallText: 0.7em;
+    /* rest */
+    --backgroundColor: var(--grey-50);
+    --textColor: var(--grey-1000);
+    --borderRadius: 0.25rem;
+    --letterSpacing: 1px;
+    --transition: 0.3s ease-in-out all;
+    --max-width: 1120px;
+    --fixed-width: 600px;
+    /* box shadows */
+    --shadow-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+    --shadow-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+        0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    --shadow-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+        0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+        0 10px 10px -5px rgba(0, 0, 0, 0.04);
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.header>img {
+    width: 200px;
+}
+
+.header {
+    background-color: black;
+    width: 100%;
+    text-align: center;
+}
+
+.display {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 80vh;
+}
+
+.watch-container {
+    width: 40%;
+    display: inline-block;
+    text-align: center;
+    position: relative;
+    top:100px;
+}
+
+.watch {
+    margin: 0 auto;
+    width: 90%;
+}
+
+.text-container {
+    width: 60%;
+    display: inline-block;
+}
+
+.heading {
+    color: black;
+    letter-spacing: 2px;
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 18px;
+}
+
+.main {
+    font-size: 40px;
+    font-weight: 600;
+    margin-bottom:40px;
+}
+
+.desc {
+    font-size: 14px;
+    font-weight: 400;
+    color: black;
+}
+
+.text-wrapper {
+    width: 70%;
+}
+
+span {
+    padding: 12px 24px;
+    box-sizing: border-box;
+    margin-right: 10px;
+    border-radius: 3px;
+}
+
+.feature {
+    padding: 12px 24px;
+    border: none;
+    background-color:var(--grey-800);
+    box-shadow: var(--shadow-4);
+    font-size: 14px;
+    font-weight: 500;
+    border-radius: var(--borderRadius);
+}
+.buy-wrapper
+{
+    margin-top:24px;
+}
+.buy-wrapper>button
+{
+    padding: 12px 24px;
+    border: none;
+    background-color:orange;
+    box-shadow: var(--shadow-4);
+    font-size: 15px;
+    font-weight: 500;
+    border-radius: var(--borderRadius);
+}
+.watch-content
+{
+    display:inline-block;
+    position: relative;
+    top:-400px
+}
+.watch-content>p
+{
+    font-size: 35px;
+    font-weight: 700;
+    color:white;
 }
